Menu button alignment fix  margin-top 4px

--- a/content.css
+++ b/content.css
@@ -61,7 +61,7 @@ location-footer {
 side-nav-menu-button,
 side-nav-menu-button .main-menu-button {
     margin-left: 6px !important;
-    margin-top: 8px !important;
+    margin-top: 4px !important;
 }
 
 /* ================================
